[package]
authors = ["Souma Suzuki <subayai.kobashiri@gmail.com>"]
edition = "2018"
name = "poster-auth"
version = "0.1.0"
[dependencies]
actix-web = "1.0.8"

futures = "0.1"
env_logger = "*"
derive_more = "0.15.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

oidc = "0.3.0"

reqwest = "0.9.17"
